# maubot-redactor

./: README.md  base-config.yaml  maubot.yaml  pyproject.toml
.github/workflows/: build.yml
redactor/: __init__.py  base.py  config.py  plugin.py  utils.py
